Start of assignment 2 am not sure if my tag went through

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CheckoutActivity"></activity>
+        <activity
+            android:name=".NicerMenuActivity"
+            android:label="@string/title_activity_nicer_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CheckoutActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
